--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "predeploy": "rm -r node_modules & yarn install --production && yarn build",
+    "prelocal": "yarn build",
+    "local": "sls offline",
+    "deploy": "sls deploy --stage prod",
+    "deploy:local": "sls deploy --stage local",
+    "package": "sls package",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,6 +39,7 @@
     "mysql2": "^3.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "serverless-offline": "^14.4.0",
     "typeorm": "^0.3.22",
     "typeorm-naming-strategies": "^4.1.0"
   },
@@ -55,8 +62,6 @@
     "jest": "29.5.0",
     "prettier": "^2.3.2",
     "serverless": "^4.14.1",
-    "serverless-esbuild": "^1.55.0",
-    "serverless-offline": "^14.4.0",
     "serverless-plugin-optimize": "^4.2.1-rc.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
