--- a/serverless.yml
+++ b/serverless.yml
@@ -4,15 +4,16 @@ provider:
   name: aws
   runtime: nodejs20.x
   region: us-east-1
+  memorySize: 512
+  timeout: 15
+  stage: dev
 
 plugins:
-#- serverless-esbuild
   - serverless-offline
 
 functions:
   api:
     handler: dist/serverless.handler
-#    handler: src/serverless.handler
     events:
       - http:
           path: /{proxy+}
@@ -20,7 +21,8 @@ functions:
 
 package:
   individually: true
+  excludeDevDependencies: true
   exclude:
-    - node_modules/**
-    - .gitignore
-    - .git/**
+    - node_modules/@types/**
+    - node_modules/aws-sdk/**
+    - node_modules/typescript/**
