feat(external apis): save data result on redis cache

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ DB_SYNCHRONIZE=ENABLED
 # Throttler
 THROTTLER_TTL=60000
 THROTTLER_LIMIT=50
+
+# Redis
+REDIS_HOST=https://redis-db-dummy.com
+REDIS_PORT=6379
+REDIS_CACHE_TTL=1800
+REDIS_MAX_ITEM_IN_CACHE=0
