feat(add historial endpoint): return character profile history with pagination

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ REDIS_HOST=https://redis-db-dummy.com
 REDIS_PORT=6379
 REDIS_CACHE_TTL=1800
 REDIS_MAX_ITEM_IN_CACHE=0
+
+# pagination
+PAGINATION_LIMIT=15
+PAGINATION_MAX_LIMIT=30
